--- a/FrontEnd/sharetrip/src/App.css
+++ b/FrontEnd/sharetrip/src/App.css
@@ -1,14 +1,39 @@
 *{
   margin : 0px;
+  /* background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	animation: gradient 15s ease infinite; */
 }
- div{
-   background-image: src = "https://images.unsplash.com/photo-1569982175971-d92b01cf8694?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60.png";
+ /* .Body{
+  background: url"https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pinterest.com%2Fpin%2F861735709930165839%2F&psig=AOvVaw3lR40HsbIL_OtgU8nwseRv&ust=1606035464792000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCPDx-ryik-0CFQAAAAAdAAAAABAJ";
   display: block;
   margin: auto;
+} */
+.Body {
+  padding-top: 10%;
+	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+  animation: gradient 10s ease infinite;
+  width: 100%;
+  height: 100vh;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
 .loginForm {
-  background-color: #fcd5ce;
-  margin: 10% 30% 0 30%;
+  position: static;
+  height: 70vh;
+  background-color: #D3D3D3;
+  margin: 0 30% 0 30%;
   top: 50%;
   left: 50%;
   border: thick solid black;
@@ -19,27 +44,47 @@
 .loginForm input{
   margin: 2% 25% 0 25%;
 }
-img {
-  width: 10rem;
-  height: 10rem;
+h1{
+  padding: 1em 0 1em 0;
 }
-.loginForm input[type = "submit"]{
+.loginForm img {
+  padding: 1em 0 1em 0;
+  border-radius: 50%;
+  width: 7rem;
+  height: 7rem;
+}
+.buttons{
+  font-weight: bold;
+  padding: 1em 0 1em 0;
   background: none;
-  color: #e9c46a;
-  border: 2px, solid;
-  border-radius: 7px;
-  background-color: black;
+  color: #0E86D4;
+  border: 5px, solid;
+  border-radius: 15px;
+  background-color: white;
   padding: .5em 1em; 
   font-size: 1em;
-  transition: color 0.25s, border-color 0.25s 
+  transition: all 0.1s; 
 }
-.loginForm input[type = "submit"]:hover{
-  color: #457b9d; 
-  border: 2px solid;
-  box-shadow: 0 0.9em -0.9em #1d3557; 
-  transform: translate (0.1,0.1);
+.buttons:hover{
+  color: rgb(69, 123, 157); 
+  font-weight: bold;
+  box-shadow: 5px 3px 3px #1d3557; 
+  transform: translate(-0.1em,-0.1em);
   
 }
-.loginForm input[type = "text"]{
-  border-radius: ;
+.inputs{
+  width: 10rem;
+  height: 2rem;
+  border-radius: 10px;
+  border: medium solid grey;
+}
+/* .inputs ::placeholder{
+  padding: 0.25em;
+} */
+h4{
+  padding: 1em 0 1em 0;
+  text-align: center;
+}
+.signup{
+  margin: 0 55% 0 45%;
 }
