--- a/frntEnd/sharetrip/src/Route/DashBoard/DashBoard.css
+++ b/frntEnd/sharetrip/src/Route/DashBoard/DashBoard.css
@@ -3,9 +3,8 @@
 }
 
 .dash-container {
-  /* background-color: #8bc6ec;
-  background-image: linear-gradient(135deg, #8bc6ec 0%, #9599e2 100%); */
-  background: white;
+  background-color: #8bc6ec;
+  background-image: linear-gradient(135deg, #8bc6ec 0%, #9599e2 100%);
 
   width: 100%;
   height: 100vh;
@@ -96,7 +95,7 @@
   justify-content: center;
   width: 100%;
   background: gray;
-  height: 100vh;
+  cursor: pointer;
 }
 
 .RESULT {
@@ -129,6 +128,21 @@
   width: 100%;
   align-items: center;
   display: flex;
-  flex-direction: column;
+
   justify-content: space-evenly;
+}
+.left {
+  height: 100%;
+  width: 60%;
+  display: flex;
+  justify-content: space-evenly;
+  margin-left: 5px;
+  flex-direction: column;
+}
+.right {
+  width: 40%;
+  justify-content: space-evenly;
+  display: flex;
+  height: 100%;
+  flex-direction: column;
 }
