--- a/frntEnd/sharetrip/src/Route/CreatePost/CreatePost.css
+++ b/frntEnd/sharetrip/src/Route/CreatePost/CreatePost.css
@@ -66,11 +66,16 @@
   height: 100%;
 }
 .crt-submit {
+  font: 40px;
+  font-weight: bolder;
   width: 200px;
   margin-left: 30px;
   border-radius: 20px;
   padding: 20px;
   border: 3px solid blueviolet;
+}
+.crt-submit:hover {
+  cursor: pointer;
 }
 
 #crt-submit {
