--- a/frntEnd/sharetrip/src/Route/Login/Login.css
+++ b/frntEnd/sharetrip/src/Route/Login/Login.css
@@ -39,23 +39,33 @@
   justify-content: center;
   align-items: center;
 }
+.form-btn-submit {
+  cursor: pointer;
+  font: bolder;
+  height: 50px;
+  width: 130px;
+  border-radius: 10px;
+  border: 2px solid blueviolet;
+}
+.form-btn-submit:hover {
+  background-color: blueviolet;
+  color: white;
+}
 
 .submit {
   display: flex;
   margin-top: 25px;
   align-items: center;
-  justify-content: center;  
- }
- .submit {
-   
+  justify-content: center;
+}
+.submit {
   border: 2px solid blueviolet;
 }
 
 .submit:hover {
-  background-color:blueviolet ;
+  background-color: blueviolet;
   color: white;
 }
-
 
 .input-container {
   display: flex;
@@ -63,26 +73,30 @@
   justify-content: space-around;
   align-items: center;
   width: 80%;
-  
 }
 .input-entry {
   width: 200px;
   height: 50px;
   border-radius: 10px;
   border: thick solid blue;
-
 }
 
 .h4-text {
   text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .form1 {
   width: 100%;
 }
 .signup {
-
-border: 2px solid blueviolet;
+  cursor: pointer;
+  font: bolder;
+  height: 50px;
+  width: 130px;
+  border-radius: 10px;
+  border: 2px solid blueviolet;
 }
 
 .signup:hover {
