--- a/frntEnd/sharetrip/src/Route/PostId/PostId.css
+++ b/frntEnd/sharetrip/src/Route/PostId/PostId.css
@@ -5,8 +5,13 @@
 .id-container {
   height: 100vh;
   width: 100%;
-  background-color: #ffdee9;
-  background-image: linear-gradient(0deg, #ffdee9 0%, #b5fffc 100%);
+  background-color: #ff3cac;
+  background-image: linear-gradient(
+    225deg,
+    #ff3cac 0%,
+    #784ba0 50%,
+    #2b86c5 100%
+  );
 }
 
 .img-div {
@@ -24,7 +29,7 @@
 }
 .id-tag {
   text-decoration: none;
-  color: blue;
+  color: yellow;
   font: bolder;
   font-size: 40;
   font-weight: bolder;
@@ -49,12 +54,16 @@
   flex-direction: column;
   margin-right: 9px;
   width: 45%;
-  background: cornsilk;
+  background-color: #faaca8;
+  background-image: linear-gradient(19deg, #faaca8 0%, #ddd6f3 100%);
+
   border-radius: 15px;
   justify-content: space-evenly;
 }
 .id-right {
-  background: cornsilk;
+  background-color: #faaca8;
+  background-image: linear-gradient(19deg, #faaca8 0%, #ddd6f3 100%);
+
   border-radius: 15px;
   margin-left: 10px;
   padding-left: 10px;
