--- a/frntEnd/sharetrip/src/Route/SignUp/SignUp.css
+++ b/frntEnd/sharetrip/src/Route/SignUp/SignUp.css
@@ -13,7 +13,7 @@
   justify-content: center;
   align-items: center;
   width: 50%;
-  
+
   height: 95vh;
 }
 .signup-container-form {
@@ -33,24 +33,32 @@
   align-items: center;
   width: 100%;
   height: 100vh;
-
 }
 
 .bio {
   width: 100%;
   height: 300px;
-  border-radius: 25px;
+  border-radius: 20px;
 }
-.upload {
+.filehand {
   display: flex;
   justify-content: center;
+  align-items: center;
+}
+.upload {
+  height: 100px;
+  width: 100%;
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
 }
 .input-container1 {
   margin-top: 5px;
   border-radius: 20px;
   height: 100%;
   width: 87%;
- 
+
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -60,7 +68,7 @@
   border-radius: 20px;
   height: 100%;
   width: 87%;
- 
+
   display: flex;
 }
 
@@ -71,6 +79,7 @@
   align-items: center;
 }
 .input-class {
+  cursor: pointer;
   width: 200px;
   margin-left: 30px;
   border-radius: 20px;
@@ -86,4 +95,19 @@
 #d-submit:hover {
   background-color: blueviolet;
   color: white;
+}
+
+.upload-class {
+  font: bolder;
+  font-weight: bolder;
+  width: 100px;
+  height: 30px;
+  border-radius: 12px;
+  border: 1px solid blueviolet;
+}
+
+.upload-class:hover {
+  background-color: blueviolet;
+  color: white;
+  cursor: pointer;
 }
