--- a/frntEnd/sharetrip/src/Route/Login/Login.css
+++ b/frntEnd/sharetrip/src/Route/Login/Login.css
@@ -14,7 +14,8 @@
   flex-direction: column;
   height: 70vh;
   align-items: center;
-  border: thick solid blueviolet;
+  border: 5px solid blue;
+
   border-radius: 30px;
   text-align: center;
 
@@ -78,7 +79,7 @@
   width: 200px;
   height: 50px;
   border-radius: 10px;
-  border: thick solid blue;
+  border: 5px solid blueviolet;
 }
 
 .h4-text {
