--- a/frntEnd/sharetrip/src/Route/PostId/PostId.css
+++ b/frntEnd/sharetrip/src/Route/PostId/PostId.css
@@ -5,13 +5,8 @@
 .id-container {
   height: 100vh;
   width: 100%;
-  background-color: #ff3cac;
-  background-image: linear-gradient(
-    225deg,
-    #ff3cac 0%,
-    #784ba0 50%,
-    #2b86c5 100%
-  );
+  background-color: #0093e9;
+  background-image: linear-gradient(160deg, #0093e9 0%, #80d0c7 100%);
 }
 
 .img-div {
@@ -54,15 +49,15 @@
   flex-direction: column;
   margin-right: 9px;
   width: 45%;
-  background-color: #faaca8;
-  background-image: linear-gradient(19deg, #faaca8 0%, #ddd6f3 100%);
+  background-color: #fad961;
+  background-image: linear-gradient(90deg, #fad961 0%, #f76b1c 100%);
 
   border-radius: 15px;
   justify-content: space-evenly;
 }
 .id-right {
-  background-color: #faaca8;
-  background-image: linear-gradient(19deg, #faaca8 0%, #ddd6f3 100%);
+  background-color: #fad961;
+  background-image: linear-gradient(90deg, #fad961 0%, #f76b1c 100%);
 
   border-radius: 15px;
   margin-left: 10px;
