--- a/frntEnd/sharetrip/src/Route/CreatePost/CreatePost.css
+++ b/frntEnd/sharetrip/src/Route/CreatePost/CreatePost.css
@@ -36,9 +36,10 @@
 .input-crt-txt {
   resize: none;
   width: 300px;
-  margin-left: 30px;
+  margin-left: 10px;
+  margin-right: 10px;
   border-radius: 20px;
-  padding: 20px;
+  padding: 25px;
   height: 150px;
   border: 3px solid blueviolet;
 }
