--- a/frntEnd/sharetrip/src/Route/SignUp/SignUp.css
+++ b/frntEnd/sharetrip/src/Route/SignUp/SignUp.css
@@ -3,10 +3,18 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  height: 100vh;
-  width: 100%;
+  flex-direction: column;
+  height: 100%;
+  position: relative;
+  width: 110%;
 }
-
+.navbar {
+  height: 130px;
+  width: 100%;
+  border: 5px solid black;
+  display: flex;
+  position: sticky;
+}
 .signup-container {
   display: flex;
   flex-direction: column;
