--- a/frntEnd/sharetrip/src/Route/CreatePost/CreatePost.css
+++ b/frntEnd/sharetrip/src/Route/CreatePost/CreatePost.css
@@ -2,7 +2,7 @@
   margin: 0px;
 }
 
-.crt-container {
+/* .crt-container {
   background-color: #8bc6ec;
   background-image: linear-gradient(135deg, #8bc6ec 0%, #9599e2 100%);
   width: 100%;
@@ -11,9 +11,30 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+} */
+:root {
+  --dark: #34495e;
+  --darker: #2c3e50;
+  --light: #7f8c8d;
+  --lighter: #ecf0f1;
+  --bright: #ffffff;
+  --font: 'Capriola', sans-serif;
+  --box-shadow: 0 0 5px var(--light);
+  --top: 82px;
 }
 
-.crt-post {
+.crt-container {
+  width: 100%;
+    min-height: calc(100vh - var(--top));
+    padding: 10vh 0;
+    text-align: center;
+    background-color: var(--lighter);
+    font-family: var(--font);
+    font-size: 16px;
+    color: var(--darker);
+}
+
+/* .crt-post {
   width: 55%;
   display: flex;
 
@@ -24,24 +45,37 @@
   text-align: center;
 
   justify-content: center;
+} */
+
+.crt-post {
+  text-align: center;
+    background-color: var(--lighter);
+    font-family: var(--font);
+    font-size: 16px;
+    color: var(--darker);
 }
 
 .input-crt {
-  width: 200px;
+  max-width: 95%;
+    width: 450px;
   margin-left: 30px;
   border-radius: 20px;
-  padding: 20px;
-  border: 3px solid blueviolet;
+  padding: 15px;
+  box-shadow: var(--box-shadow);
+  margin: 5px;
 }
 .input-crt-txt {
   resize: none;
-  width: 300px;
+  max-width: 95%;
+  width: 450px;
   margin-left: 10px;
   margin-right: 10px;
   border-radius: 20px;
-  padding: 25px;
+  padding: 15px;
   height: 150px;
-  border: 3px solid blueviolet;
+  margin: 20px;
+  box-shadow: var(--box-shadow);
+  
 }
 .crt-h1 {
   margin-bottom: 20px;
@@ -49,14 +83,14 @@
 
 .lft {
   margin-top: 5px;
-
+align-items: center;
   height: 100%;
-  width: 87%;
+  width: 100%;
 
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  align-items: flex-start;
+  
 }
 .rgt {
   display: flex;
@@ -69,22 +103,24 @@
 .crt-submit {
   font: 40px;
   font-weight: bolder;
-  width: 200px;
+  background-color: var(--dark);
   margin-left: 30px;
   border-radius: 20px;
-  padding: 20px;
-  border: 3px solid blueviolet;
+  padding: 10px;
+  
 }
 .crt-submit:hover {
   cursor: pointer;
 }
 
 #crt-submit {
-  width: 200px;
+  width: 265px;
   height: 60px;
-  color: #e73c7e;
+  margin: 20px;
+  
 }
 #crt-submit:hover {
-  background-color: blueviolet;
+  background-color: var(--dark);
+  box-shadow: var(--box-shadow);
   color: white;
 }
