--- a/frntEnd/sharetrip/src/Route/Home/Home.css
+++ b/frntEnd/sharetrip/src/Route/Home/Home.css
@@ -1,16 +1,48 @@
-.container-home {
+
+/* .container-home {
   display: flex;
   width: 100%;
   height: 100vh;
   flex-direction: column;
+} */
+
+.container-home {
+  --dark: #34495e;
+  --darker: #2c3e50;
+  --light: #7f8c8d;
+  --lighter: #ecf0f1;
+  --bright: #ffffff;
+  --font: 'Capriola', sans-serif;
+  --box-shadow: 0 0 5px var(--light);
+  --top: 82px;
 }
+body {
+  min-width: 300px;
+  font-family: var(--font);
+  font-size: 16px;
+  color: var(--darker);
+}
+
+
 .navbar {
   height: 130px;
   width: 100%;
-  border: 5px solid black;
   display: flex;
   position: sticky;
+  box-shadow: var(--box-shadow);
+  background-color: var(--bright);
 }
+
+/* .navbar {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  padding: 8px;
+  display: flex;
+  justify-content: space-around;
+  background-color: var(--bright);
+  box-shadow: var(--box-shadow);
+} */
 
 .logo-navbar {
   height: 130px;
@@ -18,27 +50,169 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-left: 150px;
 }
+
+
+
+  
 
 .logo {
+  
   height: 80px;
-  width: 80px;
+  width: 150px;
 }
+
+
+
+
 .navbar-content {
   display: flex;
-
+  border-radius: 2px;
+  transition: .3s;
   width: 90vw;
   justify-content: flex-end;
   align-items: center;
+  
 }
+
+
+
 .navbar-content-ind {
   margin-left: 10px;
   margin-right: 10px;
   font-size: 30px;
   border: none;
-  background-color: none;
+  background-color: var(--bright);
+  transition: .3s; 
+  padding: 5px;
+  font-weight: normal !important;
+  border-radius: 2px;
 }
 .navbar-content-ind:hover {
-  background-color: pink;
+  
   cursor: pointer;
 }
+
+#wrap {
+  width: 100%;
+  height: auto;
+  min-height: 75vh;
+  background-color: var(--light);
+  background-image: url('../images/bg.jpeg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  margin-top: var(--top);
+  display: flex;
+}
+
+main {
+  color: var(--bright);
+  margin: auto;
+  padding: 100px 15px;
+  text-align: center;
+}
+
+h1 {
+  
+  font-size: 4rem;
+  margin-bottom: 40px;
+  text-align: center;
+}
+
+main p {
+  font-size: 2rem;
+  text-shadow: 0px 0px 2px #000000;
+  }
+
+  .more {
+    padding: 40px 0;
+  }
+  
+  h2 {
+    font-size: 2.5rem;
+    margin-bottom: 25px;
+    text-align: center;
+  }
+  
+  .description {
+    display: flex;
+    width: 90%;
+    max-width: 1000px;
+    margin: auto;
+    overflow: hidden;
+  }
+
+  .image-box {
+    width: 50%;
+    background-image: url('../images/rider-hands.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    transition: .5s;
+  }
+
+
+  #description-one .image-box {
+    background-image: url('../images/rider.svg');
+    animation: steer 10s infinite;
+    z-index: -1;
+  }
+  
+  @keyframes steer {
+    0% {transform: rotate(0deg)}
+    10% {transform: rotate(-200deg)}
+    35% {transform: rotate(170deg)}
+    50% {transform: rotate(140deg)}
+    65% {transform: rotate(190deg)}
+    80% {transform: rotate(110deg)}
+    100% {transform: rotate(0deg)}
+  }
+
+  .word-box {
+    width: 50%;
+  }
+  
+  .word-box p {
+    margin: 25px 5%;
+  }
+  .more:last-of-type {
+    background-color: var(--lighter);
+  }
+  
+  #description-two {
+    flex-direction: row-reverse;
+  }
+  
+  #description-two .word-box {
+    text-align: right;
+  }
+
+  #btn-wrap {
+    text-align: center;
+  }
+  
+  #btn-wrap a {
+    display: inline-block;
+    margin: 0 20px;
+    width: 100px;
+  }
+
+  footer {
+    height: var(--top);
+    line-height: var(--top);
+    background-color: var(--darker);
+    color: var(--bright);
+    display: flex;
+    justify-content: space-around;
+  }
+  
+  footer a {
+    color: var(--bright);
+  }
+  
+  footer a:hover {
+    color: var(--light);
+  }
