--- a/frntEnd/sharetrip/src/Route/Login/Login.css
+++ b/frntEnd/sharetrip/src/Route/Login/Login.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
   background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
   flex-direction: column;
   display: flex;
@@ -6,54 +6,150 @@
   align-items: center;
   width: 100%;
   height: 100vh;
+} */
+
+.container {
+  --dark: #34495e;
+  --darker: #2c3e50;
+  --light: #7f8c8d;
+  --lighter: #ecf0f1;
+  --bright: #ffffff;
+  --font: 'Capriola', sans-serif;
+  --box-shadow: 0 0 5px var(--light);
+  --top: 82px;
 }
 
-.loginForm {
+body {
+  min-width: 300px;
+  font-family: var(--font);
+  font-size: 16px;
+  color: var(--darker);
+}
+/* nav bar */ 
+
+.navbar {
+  height: 130px;
+  width: 100%;
+  display: flex;
+  position: sticky;
+  box-shadow: var(--box-shadow);
+  background-color: var(--bright);
+}
+.logo-navbar {
+  height: 130px;
+  width: 130px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo {
+  height: 80px;
+  width: 80px;
+}
+
+
+.navbar-content {
+  display: flex;
+  border-radius: 2px;
+  transition: .3s;
+  width: 90vw;
+  justify-content: flex-end;
+  align-items: center;
+  
+}
+
+
+
+.navbar-content-ind {
+  margin-left: 10px;
+  margin-right: 10px;
+  font-size: 30px;
+  border: none;
+  background-color: var(--bright);
+  transition: .3s; 
+  padding: 5px;
+  font-weight: normal !important;
+  border-radius: 2px;
+}
+.navbar-content-ind:hover {
+  
+  cursor: pointer;
+}
+
+
+/* end of nav bar */
+
+/* .loginForm {
   width: 55%;
   display: flex;
   flex-direction: column;
   height: 70vh;
   align-items: center;
-  border: 5px solid blue;
+  
 
   border-radius: 30px;
   text-align: center;
 
   justify-content: center;
-}
+} */
 
+.loginForm {
+  width: 100%;
+    padding: 10vh 0;
+  text-align: center;
+  background-color: var(--lighter);
+}
 .h1-txt {
   margin-top: 10px;
   margin-bottom: 10px;
 }
-.logo {
+/* .logo {
   width: 200px;
   height: 200px;
   border-radius: 50%;
-}
+} */
 
-.formArea {
+/* .formArea {
   display: flex;
   width: 100%;
   height: 15vh;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+} */
+
+.formArea {
+ 
+    display: flex;
+    flex-direction: column;
+  
 }
-.form-btn-submit {
+/* .form-btn-submit {
   cursor: pointer;
   font: bolder;
   height: 50px;
   width: 130px;
   border-radius: 10px;
   border: 2px solid blueviolet;
-}
-.form-btn-submit:hover {
-  background-color: blueviolet;
-  color: white;
+} */
+
+.form-btn-submit {
+  background-color: var(--darker);
+  border-radius: 20px;
+  color: var(--bright);
+  padding: 10px;
+  text-decoration: none;
+  text-align: center;
+  width: 450px;
 }
 
-.submit {
+.form-btn-submit:hover {
+  box-shadow: 5px 5px 10px var(--light);
+  cursor: pointer;
+}
+
+/* .submit {
   display: flex;
   margin-top: 25px;
   align-items: center;
@@ -61,31 +157,85 @@
 }
 .submit {
   border: 2px solid blueviolet;
+} */
+
+.submit {
+  
+  max-width: 95%;
+    width: 450px;
+  min-width: 160px;
+  padding: 10px;
+  border-radius: 5px;
+  
+  border: transparent;
+  margin: 10px auto;
+  font-family: var(--font);
+  font-size: 16px;
 }
 
-.submit:hover {
+/* .submit:hover {
   background-color: blueviolet;
   color: white;
-}
+} */
 
-.input-container {
+/* .input-container {
   display: flex;
   background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
   justify-content: space-around;
   align-items: center;
   width: 80%;
+} */
+.beatloader {
+  text-align: center;
+  background-color: var(--lighter);
+  padding: 5px;
 }
-.input-entry {
+
+
+.input-container {
+  width: 24%;
+  min-width: 160px;
+  padding: 10px;
+  border-radius: 5px;
+  border: transparent;
+  margin: 10px auto;
+  font-family: var(--font);
+  font-size: 16px;
+}
+
+/* .input-entry {
   width: 200px;
   height: 50px;
   border-radius: 10px;
   border: 5px solid blueviolet;
+} */
+
+.input-entry {
+  box-shadow: var(--box-shadow);
+  max-width: 95%;
+    width: 450px;
+  min-width: 160px;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: var(--bright);
+  border: transparent;
+  margin: 10px auto;
+  font-family: var(--font);
+  font-size: 16px;
 }
 
 .h4-text {
   text-align: center;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  background-color: var(--lighter);
+  font-family: var(--font);
+    font-size: 16px;
+    color: var(--darker);
+    
+}
+
+.blank {
+  background-color: var(--lighter);
+  padding: 29px;
 }
 
 .form1 {
