--- a/frntEnd/sharetrip/src/Route/SignUp/SignUp.css
+++ b/frntEnd/sharetrip/src/Route/SignUp/SignUp.css
@@ -1,4 +1,4 @@
-.d-container {
+/* .d-container {
   background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
   display: flex;
   justify-content: space-around;
@@ -7,24 +7,101 @@
   height: 100%;
   position: relative;
   width: 110%;
+} */
+
+.d-container {
+  --dark: #34495e;
+  --darker: #2c3e50;
+  --light: #7f8c8d;
+  --lighter: #ecf0f1;
+  --bright: #ffffff;
+  --font: 'Capriola', sans-serif;
+  --box-shadow: 0 0 5px var(--light);
+  --top: 82px;
 }
+body {
+  min-width: 300px;
+  font-family: var(--font);
+  font-size: 16px;
+  color: var(--darker);
+}
+
+/* Nav bar */
+
 .navbar {
   height: 130px;
   width: 100%;
-  border: 5px solid black;
   display: flex;
   position: sticky;
+  box-shadow: var(--box-shadow);
+  background-color: var(--bright);
 }
+
+.logo-navbar {
+  height: 130px;
+  width: 130px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo {
+  height: 80px;
+  width: 80px;
+}
+
+
+.navbar-content {
+  display: flex;
+  border-radius: 2px;
+  transition: .3s;
+  width: 90vw;
+  justify-content: flex-end;
+  align-items: center;
+  
+}
+
+
+
+.navbar-content-ind {
+  margin-left: 10px;
+  margin-right: 10px;
+  font-size: 30px;
+  border: none;
+  background-color: var(--bright);
+  transition: .3s; 
+  padding: 5px;
+  font-weight: normal !important;
+  border-radius: 2px;
+}
+.navbar-content-ind:hover {
+  
+  cursor: pointer;
+}
+
+/* Sign up */
+
 .signup-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 50%;
-
+  margin-top: var(--top);
   height: 95vh;
+  width: 100%;
 }
-.signup-container-form {
+/* .signup-container  {
+  width: 100%;
+  min-height: calc(100vh - var(--top));
+  margin-top: var(--top);
+  padding: 10vh 0;
+  text-align: center;
+  background-color: var(--lighter);
+} */
+
+
+/* .signup-container-form {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -32,7 +109,21 @@
   width: 100%;
 
   height: 95vh;
+} */
+
+/* .signup-container-form {
+  display: flex;
+  flex-direction: column;
+} */
+
+
+
+.signup-container + p {
+
+  margin-top: 20px;
 }
+
+
 .sec-signup {
   margin-right: 20px;
   display: flex;
@@ -43,12 +134,29 @@
   height: 100vh;
 }
 
-.bio {
+/* .sec-signup { max-width: 95%;
+  width: 450px;
+} */
+/* .bio {
   width: 100%;
   height: 300px;
   border-radius: 20px;
+} */
+
+.bio { max-width: 95%;
+  width: 450px;
+  min-width: 160px;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: var(--bright);
+  border: transparent;
+  margin: 10px auto;
+  font-family: var(--font);
+  font-size: 16px;
+  box-shadow: var(--box-shadow);;
 }
-.filehand {
+
+/* .filehand {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -60,8 +168,8 @@
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-}
-.input-container1 {
+} */
+/* .input-container1 {
   margin-top: 5px;
   border-radius: 20px;
   height: 100%;
@@ -71,13 +179,31 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: flex-start;
+} */
+.input-contain1 {
+  width: 100%;
+  min-height: calc(100vh - var(--top));
+  margin-top: var(--top);
+  padding: 10vh 0;
+  text-align: center;
+  background-color: var(--lighter);
 }
-.input-container {
+
+/* .input-container {
   border-radius: 20px;
   height: 100%;
   width: 87%;
 
   display: flex;
+} */
+
+.input-contain {
+  width: 100%;
+  min-height: calc(100vh - var(--top));
+  margin-top: var(--top);
+  padding: 10vh 0;
+  text-align: center;
+  background-color: var(--lighter);
 }
 
 .gender {
@@ -86,19 +212,41 @@
   justify-content: center;
   align-items: center;
 }
-.input-class {
+/* .input-class {
   cursor: pointer;
   width: 200px;
   margin-left: 30px;
   border-radius: 20px;
   padding: 20px;
   border: 3px solid blueviolet;
-}
+} */
+
+.input-class 
+  {
+    max-width: 95%;
+    width: 450px;
+    min-width: 160px;
+    padding: 10px;
+    border-radius: 5px;
+    background-color: var(--bright);
+    border: transparent;
+    margin: 10px auto;
+    font-family: var(--font);
+    font-size: 16px;
+    box-shadow: var(--box-shadow);
+  }
+
+
+/* #d-submit {
+  width: 200px;
+  height: 60px;
+  color: #e73c7e;
+} */
 
 #d-submit {
   width: 200px;
   height: 60px;
-  color: #e73c7e;
+  
 }
 #d-submit:hover {
   background-color: blueviolet;
