--- a/frntEnd/sharetrip/src/index.css
+++ b/frntEnd/sharetrip/src/index.css
@@ -1,13 +1,23 @@
-body {
+
+
+
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+} */
+
+body {
+  min-width: 300px;
+  font-family: var(--font);
+  font-size: 16px;
+  color: var(--darker);
 }
 
-code {
+/* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
-}
+} */
