--- a/frntEnd/sharetrip/src/Route/DashBoard/DashBoard.css
+++ b/frntEnd/sharetrip/src/Route/DashBoard/DashBoard.css
@@ -173,19 +173,26 @@
   --font: "Capriola", sans-serif;
   --box-shadow: 0 0 5px var(--light);
   --top: 82px;
+  margin-left: 300px;
 }
 
+
+
 .RESULT {
+  
   height: 300px;
   margin-top: 40px;
-  background-color: red;
-
+  
   justify-content: space-between;
   width: 70%;
   display: flex;
   border-radius: 20px;
 }
 
+.RESULT :hover {
+  cursor: pointer;
+
+}
 .profile {
   height: 200px;
   width: 200px;
@@ -200,14 +207,18 @@
   background-color: #85ffbd;
   background-image: linear-gradient(45deg, #85ffbd 0%, #fffb7d 100%);
   justify-content: space-evenly;
+  box-shadow: var(--box-shadow);
+  border: transparent;
 }
 
 .RESULT_RIGHT {
   width: 100%;
   align-items: center;
   display: flex;
-
+  background-color: var(--lighter);
   justify-content: space-evenly;
+  box-shadow: var(--box-shadow);
+  border: transparent;
 }
 .left {
   height: 100%;
